1998-02-02  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* throw.h: Removed jmpbuf arg in scm_catch_body_t.

	* backtrace.c (display_error_body, display_backtrace_body),
	coop-threads.c (scheme_body_bootstrip, c_body_bootstrip),
	gh_eval.c (eval_str_wrapper, eval_file_wrapper), init.c
	(invoke_main_func), root.c (cwdr_body), throw.c (cwss_body,
	scm_body_thunk, hbpca_body): Removed the second jmpbuf arg on body
	functions.

	* throw.c (scm_internal_catch, scm_internal_lazy_catch): Bodies
	don't receive the jmpbuf arg anylonger.
	(scm_catch): Don't accept a #f tag.
	(scm_throw): Check that key is a symbol.
	(scm_ithrow): Don't take a jmpbuf as key.  Don't check key arg.

Fri Jan 30 22:28:07 1998  Mikael Djurfeldt  <mdj@kenneth>

	* async.c (async_pending): Removed declaration.

1998-01-30  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	*  dynwind.c (scm_wind_chain): New debug function.

	* coop-threads.c (scheme_launch_data, scheme_body_bootstrip,
	scheme_handler_bootstrip, scheme_launch_thread, c_launch_data,
	c_body_bootstrip, c_handler_bootstrip, c_launch_thread): Add an
	extra layer of functions around the body and handler of a thread.
	This extra layer makes sure that the handler is called in the
	dynamic context of the surround (= empty dynwind list), but under
	the *dynamic root* of the body.  We can not use the dynamic root
	of the surround since that root belongs to another thread => stack
	is not handled correctly.  It may seem ugly to use this extra
	layer, but the extra cost in terms of execution time is really
	negligible compared to the total amount of time required to create
	a thread, and it would reduce maintainability to duplicate the
	crucial and complicated steps performed by cwdr.

	* __scm.h (SCM_ASYNC_TICK): Removed thread switching code.
	(SCM_ALLOW_INTS): Added thread switching code before interrupts
	get re-enabled.  The important effect of this is that interrupts
	are blocked during thread switching so that thread data structures